--- a/PlottingScripts/MakeFigures.Rmd
+++ b/PlottingScripts/MakeFigures.Rmd
@@ -79,7 +79,9 @@ GWAS <- ggplot(NotSig, aes(x = Pos,
                     axis.ticks.x = element_blank(),
                     axis.line.x = element_blank(), 
                     strip.background = element_blank(),
-                    strip.text.x = element_text(size = 6))
+                    strip.text.x = element_text(size = 12),
+                    axis.text.y = element_text(size = 20),
+                    axis.title = element_text(size = 20))
 GWAS
 ```
 
