--- a/PlottingScripts/MakeFigures.Rmd
+++ b/PlottingScripts/MakeFigures.Rmd
@@ -236,7 +236,7 @@ ggsave(paste0(figurePath,
        height = 12,
        width = 12)
 }
-AB
+fig1
 
 #save memory
 rm(GWAS)
@@ -572,7 +572,6 @@ af1 <- ggplot(AF30, aes(x=uAF, y=oAF))+
   geom_abline(intercept=0, slope = 2279/225, linetype=2, color='black')+
   geom_abline(intercept=0, slope = 2279/450, linetype=3, color='red')+
   labs(x='Samples with Q < 30',y='Samples with Q > 30')
-af1
 
 af2 <- ggplot(AF30[which(AF30$oAF <100),], aes(x=uAF, y=oAF))+
   geom_bin2d(bins=100)+
@@ -580,7 +579,6 @@ af2 <- ggplot(AF30[which(AF30$oAF <100),], aes(x=uAF, y=oAF))+
   geom_abline(intercept=0, slope = 2279/225, linetype=2, color='black')+
   geom_abline(intercept=0, slope = 2279/450, linetype=3, color='red')+
   labs(x='Samples with Q < 30',y='Samples with Q > 30')
-af2
 
 plot_grid(af1, af2,ncol=1)
 
