--- a/legacy.tex
+++ b/legacy.tex
@@ -63,7 +63,6 @@ Many more genomes are available indirectly through servers providing imputation 
 The first genomes in the 1kGP were sequenced 10 years ago \citep{VanDijk2014}. Since then, sequencing platforms have rapidly improved.  
 The second phase of the 1kGP implemented multiple technological and analytical improvements over its earlier phases \citep{The1000GenomesProjectConsortium2012}, leading to heterogeneous sample preparations and data quality.
 
-
 Yet, because of the extraordinary value of freely available data, early data from the 1kGP is still widely used as a reference panel for imputation, allele frequency estimations and to answer a wide range of medical and evolutionary questions.
 This raises the question of whether and how such legacy data should be included in contemporary analyses alongside more recent cohorts.
 Here we point out how large and previously unreported batch effects in the early phases of the 1kGP still lead to incorrect genetic conclusions through population genetic analyses and spurious GWAS associations as a result of imputation using the 1kGP as a reference.
@@ -80,7 +79,7 @@ In 2015, Harris reported 50\% more TCC ${\rightarrow}$ TTC mutations in European
 Strong population enrichments of a mutational signature suggests important genetic or environmental differences in the history of each population \citep{Harris2015a, Harris2017a}. 
 Harris and Pritchard further identified distinct mutational spectra across a range of populations, which were further examined in a recent publication by Aikens et al. \citep{Harris2017a,Aikens2018}.
  
- In particular, the latter two studies  identified a heterogeneous mutational signature within 1000 Genomes Japanese individuals.
+In particular, the latter two studies  identified a heterogeneous mutational signature within 1000 Genomes Japanese individuals.
 This heterogeneity is intriguing because differences in germline signatures accumulate over many generations.
 A systematic difference within the Japanese population would suggest sustained environmental or genetic differences across sub-populations within Japan with little to no gene flow.
 We therefore decided to follow up on this observation, by using a newly sequenced dataset of Japanese individuals. 
@@ -136,7 +135,7 @@ Thus, sequences called from low-$Q$ data contain variants that reproduce poorly 
 
 To identify SNPs that are likely to reproduce poorly across cohorts without having access to a second cohort, we performed an association study in the JPT for SNPs that associate strongly with low $Q$ (Figure \ref{SFS}).
 Traditionally, genome wide association studies use genotypes as the independent variable. 
-Here we perform a ``reverse GWAS'', in the sense that genotypes are now the dependent variable that we attempt to predict using the continuous variable $Q$ as the independent variable.
+Here we perform a ``reverse GWAS'' or Genotype-Conditional Association Test, in the sense that genotypes are now the dependent variable that we attempt to predict using the continuous variable $Q$ as the independent variable \citep{song2015testing}.
 We use logistic regression of the genotypes on $Q$ and identify 587 SNPs with $p < 10^{-8}$ and 1034 SNPs with $ p < 10^{-6}$. 
 While identifying putative low-quality SNPs to exclude, using a higher $p$-value threshold increases the stringency of the filtering (i.e., excluding SNPs with $ p < 10^{-6}$ is more stringent than excluding SNPS with $p < 10^{-8}$). 
 The variants that are associated to $Q$ have an enrichment in *AC${\rightarrow}$*CC mutations, GA*${\rightarrow}$GG*, and GC*${\rightarrow}$GG* mutations (Figure \ref{SFS}A).
@@ -230,36 +229,35 @@ Despite using state-of-the-art quality controls, these erroneous variants manage
 \begin{table}[h]
 \begin{tabular}{l l l r r r}
   {Pubmed ID}  & {Journal} & {rsID} & \multicolumn{1}{p{1cm}}{\centering GWAS \\ -$\log_{10} p$} & \multicolumn{1}{p{1.5cm}}{\centering $Q$ -$\log_{10} p$\\(adjusted)}      \\ \hline
-28654678 & PLoS One & *rs201761909 & 5.7 & 78.11\\
-	& 	&  	*rs201130852 & 5.05 & 72.28\\
-	& 	&  	*rs201255786 & 5.7 & 68.97\\
-	& 	&  	*rs200655768 & 6.52 & 66.67\\
-	& 	&  	*rs184202621 & 5.52 & 60.45\\
-	& 	& 	*rs80274284 & 6 & 56.15\\
-	& 	& 	*rs200699422 & 5.3 & 7.43\\
-23527680 & \multicolumn{1}{p{3cm}}{\raggedright Twin Research and\\Human Genetics} & *rs6057648 & 5.4 & 20.5\\
-28928442 & \multicolumn{1}{p{3cm}}{\raggedright Nature Communications} & *rs201471471 & 6.52 & 7.87\\
-28270201 & \multicolumn{1}{p{3cm}}{\raggedright Genome Medicine} & rs453755 & 7.52 & 5.29\\
-23023329 & \multicolumn{1}{p{3cm}}{\raggedright Nature Genetics} & rs103294 & *15.3 & 4.32\\
-28334899 & \multicolumn{1}{p{3cm}}{\raggedright Human Molecular Genetics} & rs103294 & *29.3 & 4.32\\
-28240269 & \multicolumn{1}{p{3cm}}{\raggedright Nature Communications} & rs103294 & *72.7 & 4.32\\
-27863252 & \multicolumn{1}{p{3cm}}{\raggedright Cell\\} & rs3794738 & *13.15 & 3.73\\
-29534301 & \multicolumn{1}{p{3cm}}{\raggedright Hepatology\\} & rs9273062 & *9.7 & 3.36\\
-21386085 & \multicolumn{1}{p{3cm}}{\raggedright Diabetes\\}  & rs301 & *10.52 & 3.02\\
-26830138 & \multicolumn{1}{p{3cm}}{\raggedright Molecular Psychiatry} & rs77894924 & 6.7 & 2.77\\
-29617998 & \multicolumn{1}{p{3cm}}{\raggedright Human Molecular Genetics} & rs4963156 & *22.4 & 2.52\\
-28698626 & \multicolumn{1}{p{3cm}}{\raggedright Scientific Reports} & rs11015915 & 5.05 & 2.45\\
-26974007 & \multicolumn{1}{p{3cm}}{\raggedright Nature Genetics} & rs3124998 & *8.05 & 2.33\\
-26634245 & \multicolumn{1}{p{3cm}}{\raggedright BMC Genetics} & rs451000 & 6 & 2.28\\
- 	& 	& 	rs443874 & 5.3 & 2.26\\
-	& 	&	rs400942 & 6 & 2.2\\
-26053186 & \multicolumn{1}{p{3cm}}{\raggedright PLoS One} & *rs60136336 & 5.7 & 2.25\\
-
-25918132 & \multicolumn{1}{p{3cm}}{\raggedright Toxicological Sciences} & rs76780579 & 6 & 2.09\\
+28654678 & PLoS One & rs201761909 & 5.7 & 78.11\\
+	& 	&  	rs201130852 & 5.05 & 72.28\\
+	& 	&  	rs201255786 & 5.7 & 68.97\\
+	& 	&  	rs200655768 & 6.52 & 66.67\\
+	& 	&  	rs184202621 & 5.52 & 60.45\\
+	& 	& 	rs80274284 & 6 & 56.15\\
+	& 	& 	rs200699422 & 5.3 & 7.43\\
+23527680 & \multicolumn{1}{p{3cm}}{\raggedright Twin Research and\\Human Genetics} & rs6057648 & 5.4 & 20.5\\
+28928442 & \multicolumn{1}{p{3cm}}{\raggedright Nature Communications} & rs201471471 & 6.52 & 7.87\\
+26053186 & \multicolumn{1}{p{3cm}}{\raggedright PLoS One} & rs60136336 & 5.7 & 2.25\\ \hline
+\textcolor{gray}{28270201} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Genome Medicine}} & \textcolor{gray}{rs453755} & \textcolor{gray}{7.52} & \textcolor{gray}{5.29}\\
+\textcolor{gray}{23023329} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Nature Genetics}} & \textcolor{gray}{rs103294} & \textcolor{gray}{*15.3} & \textcolor{gray}{4.32}}\\
+\textcolor{gray}{28334899} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Human Molecular Genetics}} & \textcolor{gray}{rs103294} & \textcolor{gray}{*29.3} & \textcolor{gray}{4.32}\\
+\textcolor{gray}{28240269} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Nature Communications}} & \textcolor{gray}{rs103294} & \textcolor{gray}{*72.7} & \textcolor{gray}{4.32}\\
+\textcolor{gray}{27863252} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Cell}\\} & \textcolor{gray}{rs3794738} & \textcolor{gray}{*13.15} & \textcolor{gray}{3.73}\\
+\textcolor{gray}{29534301} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Hepatology}\\} & \textcolor{gray}{rs9273062} & \textcolor{gray}{*9.7} & \textcolor{gray}{3.36}\\
+\textcolor{gray}{21386085} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Diabetes}\\}  & \textcolor{gray}{rs301} & \textcolor{gray}{*10.52} & \textcolor{gray}{3.02}\\
+\textcolor{gray}{26830138} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Molecular Psychiatry}} & \textcolor{gray}{rs77894924} & \textcolor{gray}{6.7} & \textcolor{gray}{2.77}\\
+\textcolor{gray}{29617998} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Human Molecular Genetics}} & \textcolor{gray}{rs4963156} & \textcolor{gray}{*22.4} & \textcolor{gray}{2.52}\\
+\textcolor{gray}{28698626} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Scientific Reports}} & \textcolor{gray}{rs11015915} & \textcolor{gray}{5.05} & \textcolor{gray}{2.45}\\
+\textcolor{gray}{26974007} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Nature Genetics}} & \textcolor{gray}{rs3124998} & \textcolor{gray}{*8.05} & \textcolor{gray}{2.33}\\
+\textcolor{gray}{26634245} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{BMC Genetics}} & \textcolor{gray}{rs451000} & \textcolor{gray}{6} & \textcolor{gray}{2.28}\\
+ 	& 	& 	\textcolor{gray}{rs443874} & \textcolor{gray}{5.3} & \textcolor{gray}{2.26}\\
+	& 	&	\textcolor{gray}{rs400942} & \textcolor{gray}{6} & \textcolor{gray}{2.2}\\
+\textcolor{gray}{25918132} & \multicolumn{1}{p{3cm}}{\raggedright \textcolor{gray}{Toxicological Sciences}} & \textcolor{gray}{rs76780579} & \textcolor{gray}{6} & \textcolor{gray}{2.09}\\
 
  \hline
 \end{tabular}
-\caption{A list of recent publications that reported suspicious variants as close to or above the genome-wide significant threshold. The variants reaching genome wide significance have a star ( * ). Note : with a FDR ($\alpha = 0.01$) p-value adjustment, values of $ p > -\log_{10}(\alpha)$ are deemed statistically significant. }
+\caption{A list of recent publications that reported suspicious variants as close to or above the genome-wide significant threshold. The variants reaching genome wide significance have a star ( * ). Note : with a FDR ($\alpha = 0.01$) p-value adjustment, values of $ p > -\log_{10}(\alpha)$ are deemed statistically significant. The black text colour indicates that this variant may be spurious, grey text colour indicates that these variants are likely correct but may be impacted by a calling bias.}
 \label{gwasTable}
 \end{table}
 
@@ -289,9 +287,8 @@ However, because the 1kGP data is widely used as a reference database, these var
 \subsection{Recommendations}
 While it may be difficult to determine the exact source of the bias in the data, we have been able to identify individuals and loci that do not meet quality standards expected from high-quality sequencing data.
 In order to avoid spurious results, the most conservative approach would be to remove or resequence all individuals that do not meet the quality threshold as well as all the variants associated to low $Q$. 
-We found that a cut-off of $Q = 30$ was sufficient to remove the most egregious spurious signals (Supplementary Figure \ref{}).
-Another approach, for researchers relying on imputation servers where reference panel individuals cannot be filtered out, is to remove sites that reach a significance below $ p < 10^{-2}$ in the reverse GWAS. (The supplementary material contains a list of variants statistically associated to $Q$).
-
+We found that a cut-off of $Q = 30$ was sufficient to remove the most egregious spurious signals (Supplementary Figure \ref{MutSpect}).
+Another approach, for researchers relying on imputation servers where reference panel individuals cannot be filtered out, is to remove sites that reach a significance below $ p > -\log_{10}(\alpha)$ in the reverse GWAS. (The supplementary material contains a list of variants statistically associated to $Q$).
 
 \section{Conclusion}
 
@@ -312,17 +309,13 @@ The metadata used in this analysis was compiled from each of the index files fro
 Average quality of mapped bases $Q$ per sample was obtained from the BAS files associated with each alignment file. 
 Each BAS file has metadata regarding each sequencing event for each sample. 
 If a sample was sequenced more than once, we took the average of the each $Q$ score from each sequencing instance. 
-The submission dates and sequencing centres for each sample in the analysis was available in the sequence index files.  
-This file also has multiple entries per sample, however, we were unable to match the individual sequencing runs between the bas files and the index file, which lead us to take the average of the $Q$ scores and only kept the earliest sequencing date per sample. 
-The dates of the sequencing are only used to plot Figure.
+The submission dates and sequencing centres for each sample in the analysis was available in the sequence index files \ref{ProcessPlotData.Rmd}.
 
 \subsection{Data Availability}
 
 Index of BAS files \href{http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/data_collections/1000_genomes_project/1000genomes.low_coverage.GRCh38DH.alignment.index}{available here}.
 
 Phase3 analysis sequence index file  \href{http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/20130502.phase3.analysis.sequence.index}{available here} 
-
-\todo{link to my compiled metadata file here}
 
 \subsection{Quality Controls}
 We reproduced the quality control pipelines used by Harris et. al as they applied the current state of the art quality thresholds to remove questionable sequences especially for the high standards for detecting population level differences. 
@@ -331,7 +324,7 @@ The  1000 Genomes \href{http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/201305
 Furthermore, only sites with missingness below 0.01, MAF less than 0.1, and MAF greater than 0.9 we're considered.
 In total, 57,838,849 diallelic autosomal variants passed our quality controls for the mutation spectrum analysis.
 
-For the reverse GWAS, the only filtration used was the application of an minor and major allele frequency cutoff of 0.000599 (removing singletons, doubletons and tripletons)  resulting in a total of 28,516,063 variants ($S$) included in the test (see Table \ref{totTable}). We also used the \href{http://hgdownload.cse.ucsc.edu/goldenpath/hg19/database/nestedRepeats.txt.gz}{NestedRepeats} mask file to flag variants inside repetitive regions as these were analyzed separately.
+For the reverse GWAS, the only filtration used was the application of an minor and major allele frequency cutoff of 0.000599 (removing singletons, doubletons and tripletons) resulting in a total of 28,516,063 variants ($S$) included in the test (see Table \ref{totTable}). We also used the \href{http://hgdownload.cse.ucsc.edu/goldenpath/hg19/database/nestedRepeats.txt.gz}{NestedRepeats} mask file to flag variants inside repetitive regions as these were analyzed separately.
 
 \begin{table}[h]
 \begin{tabular}{l  r r}
@@ -344,7 +337,10 @@ For the reverse GWAS, the only filtration used was the application of an minor a
 \end{table}
 
 \subsection{Testing the association of quality to genotype}
-When conducting a statistical analysis of population genetics data, an essential consideration is  to adjust or account for population structure. In a typical GWAS, we are interested in modelling the phenotype as a function of the genotype. Here we have the opposite situation, where the quantitative variable ($Q$) is used as an explanatory variable. So we consider models where the genotype $y$ is a function of an expected frequency $\pi_{si},$ based on population structure, and $Q$. The null model is 
+When conducting a statistical analysis of population genetics data, an essential consideration is  to adjust or account for population structure. In a typical GWAS, we are interested in modelling the phenotype as a function of the genotype. 
+Here we have the opposite situation, where the quantitative variable ($Q$) is used as an explanatory variable. 
+So we consider models where the genotype $y$ is a function of an expected frequency $\pi_{si},$ based on population structure, and $Q$. 
+The null model is 
 \begin{align} \label{lfa}
 y_{si} \mid \pi_{si}  &\sim Binomial\big( 2, \pi_{si} \big)
 \end{align} 
@@ -354,49 +350,37 @@ The expected frequency for a SNP $s$ and individual $i$ can be estimated using p
  y_{si} \mid q_i, \boldsymbol{h}^{(i)} &\sim Binomial\bigg( 2, \logit^{-1}\Big(\logit(\pi_{si}) + \beta_s q_i\Big) \bigg)
 \end{align} 
 
-
-%Examples of models that are widely used to account population structure include the Balding-Nichols model \citep{balding1995method}, and the Pritchard- Stephens-Donnelly model \citep{pritchard2000inference}. These and several other similar models used in GWAS studies can be understood in terms of the following matrix factorization. 
-%\begin{align}
-%\mathbf{L }= \mathbf{AH}
-%\end{align} 
-%where the $i^\text{th}$ column ($\boldsymbol{h}^{(i)}$) of the $K \times I$ matrix $\mathbf{H}$ encodes the population structure of the $i$'th individual and the $s$'th row of the $S \times K$ matrix $\mathbf{A}$ determines how that structure is manifested in SNP $s$. When Hardy-Weinberg equilibrium holds, observed genotype can be assumed to be generated by the following Binomial model.
-%\begin{align} \label{lfa}
-%y_{si} \mid \pi_{si}  &\sim Binomial\big( 2, \pi_{si} \big) 
-%\end{align} 
-%for $s=1\hdots S$ and $i=i,\cdots, I$, where $y_{si} \in \{0,1,2\}$ and $logit(\pi_{si})$ is the $(s,i)$ element of the matrix $\mathbf{L}$ such that  $\pi_{si}$ is the individual-specific allele frequency.
-%
-%To test whether quality is associated to genotype while adjusting for population structure, we performed the Genotype-Conditional Association Test  (GCAT) proposed by \citep{song2015testing} The GCAT is a regression approach that assumes the following model.
-%\begin{align}\label{gcat}
-% y_{si} \mid q_i, \boldsymbol{h}^{(i)} &\sim Binomial\bigg( 2, logit^{-1}\Big( \sum_{k=0}^{K} a_{sk} h_{ki} + \beta_s q_i\Big) \bigg)
-%\end{align} 
-%for $s=1\hdots S$ and $i=i,\cdots, I$ \luke{Plug in the values of S and I} and where $\hat{h}_{0i}=1$ so that $a_{s0}$ is the intercept term and $logit(\pi_{si})=\sum_{k=0}^{K} a_{sk} h_{ki}$. The vectors $\boldsymbol{h}^{i}$ of the matrix $\mathbf{H}$ are unobserved but can be estimated using Logistic Factor Analysis (LFA) \citep{song2015testing} and plugged in the model. We approximated the population structure using $K=4$ latent components from a subsampled genotype matrix consisting of $M$ SNPs. The matrix \luke{Describe matrix}
-
-Under the null hypothesis the slope coefficient $\beta_s$ is zero and Model \ref{gcat} reduces to Model \ref{lfa}. $\beta_s$ denotes the association to average quality of mapped bases $Q$ to genotype $y_{s}$. To test the null hypothesis, we use the generalized likelihood ratio test statistic, whose deviance is a measure of the marginal importance of adding $Q$ in the model. The deviance test statistic is approximately chi-square distributed with one degrees of freedom.
-
-We run a total of $S$ regressions, where $S$ is the total number of genomic loci. Given the large number of tests, the large proportion of expected null hypotheses and the positive dependencies across the genome, we used the two-stage Benjamini \& Hochberg step-up FDR-controlling procedure to adjust the \textit{p}-values \citep{Benjamini2006}.
-By using a nominal Type-I error rate $\alpha = 0.01$, a total of 24,390 variants were found to be statistically significance. See supplementary file {here}. \luke{make this file}
-
-
-\subsection{Genome wide association study}
-We ran a simple logistic regression independently for each genomic locus $s$ using the R glm2 package\citep{RDevelopmentCoreTeam2016}. The model we fitted to each subset of data can be expressed as such.
-\begin{align*}
-%{logit}{E(Y_{s'i})} &= \beta_{0}  + \beta_{1}{PC1}_{i} + \beta_{2}{PC2}_{i} + \beta_{3}{PC3}_{i} + \beta_{4}{PC4}_{i} + \beta_{5}{PC5}_{i} + \beta_{6}Q_{i}
-{logit}{E(Y_{s'i})} &= \beta_{0}  + \beta_{1}{Pop}_{i}  + \beta_{2}Q_{i}
-\\
-\textit{for}\quad i &= 1,\hdots, n
-\end{align*}
-Here $Y_{si}$ is a Bernoulli random variable denoting the genotype of individual $i$ at genomic locus $s$. 
-%In the model, the regression coefficient $\beta_{1}{PC1}$ represents the coefficient of the first principal component, the slope coefficient $\beta_{6}$ denotes the association to average quality of mapped bases $Q$ to genotype $Y_{s}$. 
-In the model, the regression coefficient $\beta_{1}{Pop}_{i}$ represents the coefficient of the categorical variable of Population, the slope coefficient $\beta_{6}$ denotes the association to average quality of mapped bases $Q$ to genotype $Y_{s}$. 
-We run a total of $S$ regressions, where $S$ is the total number of genomic loci. 
-
-For each of the $K$ regressions, we formulated a null hypothesis $H_{0}: \beta_{2}^{(s)}=0$. That is, the average quality of mapped bases $Q$ variable is not associated with genotype $Y_{s}$.
-In other words, the slope coefficient of the simple logistic regression is zero.
-To test the null hypothesis, we used the chi-square likelihood ratio test statistic (the deviance) as a measure of the marginal importance of adding $Q$ in the model. 
+Under the null hypothesis the slope coefficient $\beta_s$ is zero and Model \ref{gcat} reduces to Model \ref{lfa}. 
+$\beta_s$ denotes the association to average quality of mapped bases $Q$ to genotype $y_{s}$. 
+To test the null hypothesis, we use the generalized likelihood ratio test statistic, whose deviance is a measure of the marginal importance of adding $Q$ in the model. 
 The deviance test statistic is approximately chi-square distributed with one degrees of freedom.
 
-Given the large number of tests (of which there are $S$), the large proportion of expected null hypotheses and the positive dependencies across the genome, we used the two-stage Benjamini \& Hochberg step-up FDR-controlling procedure to adjust the \textit{p}-values \citep{Benjamini2006}.
-By using a nominal Type-I error rate $\alpha = 0.01$, a total of 24,390 variants were found to be statistically significance. See supplementary file {here}. \luke{make this file}
+We run a total of $S$ regressions, where $S$ is the total number of genomic loci. Given the large number of tests, the large proportion of expected null hypotheses and the positive dependencies across the genome, we used the two-stage Benjamini \& Hochberg step-up FDR-controlling procedure to adjust the \textit{p}-values \citep{Benjamini2006}.
+By using a nominal Type-I error rate $\alpha = 0.01$, a total of 24,390 variants were found to be statistically significance. 
+See supplementary file {here}. \luke{make this file}
+
+\subsection{Individual-specific allele frequency}
+Examples of models that are widely used to account population structure include the Balding-Nichols model \citep{balding1995method}, and the Pritchard- Stephens-Donnelly model \citep{pritchard2000inference}. 
+These and several other similar models used in GWAS studies can be understood in terms of the following matrix factorization. 
+\begin{align}
+\mathbf{L }= \mathbf{AH}
+\end{align} 
+where the $i^\text{th}$ column ($\boldsymbol{h}^{(i)}$) of the $K \times I$ matrix $\mathbf{H}$ encodes the population structure of the $i^\text{th}$ individual and the $s^\text{th}$ row of the $S \times K$ matrix $\mathbf{A}$ determines how that structure is manifested in SNP $s$. 
+When Hardy-Weinberg equilibrium holds, observed genotype can be assumed to be generated by the following Binomial model.
+\begin{align} \label{lfa}
+y_{si} \mid \pi_{si}  &\sim Binomial\big( 2, \pi_{si} \big) 
+\end{align} 
+for $s=1\hdots S$ and $i=i,\cdots, I$, where $y_{si} \in \{0,1,2\}$ and $logit(\pi_{si})$ is the $(s,i)$ element of the matrix $\mathbf{L}$ such that  $\pi_{si}$ is the individual-specific allele frequency.
+
+To test whether quality is associated to genotype while adjusting for population structure, we performed the Genotype-Conditional Association Test  (GCAT) proposed by \citep{song2015testing}.
+The GCAT is a regression approach that assumes the following model.
+\begin{align}\label{gcat}
+ y_{si} \mid q_i, \boldsymbol{h}^{(i)} &\sim Binomial\bigg( 2, logit^{-1}\Big( \sum_{k=0}^{K} a_{sk} h_{ki} + \beta_s q_i\Big) \bigg)
+\end{align} 
+for $s=1\hdots S$ and $i=i,\cdots, I$  ($S = 28,516,063$ and $I = 2,504$) and where $\hat{h}_{0i}=1$ so that $a_{s0}$ is the intercept term and $logit(\pi_{si})=\sum_{k=0}^{K} a_{sk} h_{ki}$. 
+The vectors $\boldsymbol{h}^{i}$ of the matrix $\mathbf{H}$ are unobserved but can be estimated using Logistic Factor Analysis (LFA) \citep{song2015testing} and plugged in the model. 
+We approximated the population structure using $K=4$ latent components from a subsampled genotype matrix consisting of $M$ SNPs. 
+The matrix includes the sequence data from the 2,504 individuals from the 1kGP down-sampled to the positions from the \href{ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/hd_genotype_chip/ALL.chip.omni_broad_sanger_combined.20140818.snps.genotypes.vcf.gz}{Omni chip}
 
 \subsection{Mutation Spectrum}
 We calculated the mutation spectrum of triplets for the list of significant variants for the JPT population using a similar method as described in Harris et al. 2017. \citep{Harris2017a}
