--- a/Legacy.bib
+++ b/Legacy.bib
@@ -519,3 +519,13 @@ eprint = {/oup/backfile/content_public/journal/gigascience/6/9/10.1093_gigascien
   year={2000},
   publisher={Genetics Soc America}
 }
+@article{phase3,
+  title={A global reference for human genetic variation},
+  author={1000 Genomes Project Consortium and others},
+  journal={Nature},
+  volume={526},
+  number={7571},
+  pages={68},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
